<resources>
    <!-- App Information -->
    <string name="app_name">Compendia</string>
    <string name="first_time_user_message">Welcome to Compendia!</string>
    <string name="exit_toast">Click back once more to close Compendia</string>

    <!-- Bottom Navigation Titles -->
    <string name="title_home">Home</string>
    <string name="title_pull_list">Pull List</string>
    <string name="title_collection">Collection</string>
    <string name="title_search">Search</string>

    <!-- Dialog / Toast Messages -->
    <string name="dialog_success_header">Success!</string>
    <string name="dialog_error_header">Error</string>
    <string name="dialog_confirm">Ok</string>

    <!-- Fragment Tags -->
    <string name="tag_fragment_home">Home</string>
    <string name="tag_fragment_pull_list">Pull List</string>
    <string name="tag_fragment_collection">Collection</string>
    <string name="tag_fragment_search">Search</string>
    <string name="tag_fragment_comic_detail">Comic Detail</string>
    <string name="tag_fragment_settings">Settings</string>
    <string name="tag_fragment_new_releases">New Releases</string>
    <string name="tag_fragment_boxes">Boxes</string>
    <string name="tag_fragment_box_detail">Box Detail</string>
    <string name="tag_fragment_other_versions">Other Versions</string>
    <string name="tag_fragment_reviews">Reviews</string>
    <string name="tag_fragment_full_cover">Full Cover</string>
    <string name="tag_fragment_creators_list">Creators List</string>
    <string name="tag_fragment_creator_detail">Creator Detail</string>
    <string name="tag_fragment_change_password">Change Password</string>

    <!-- Intent Tags -->
    <string name="intent_comic">intent_comic</string>
    <string name="intent_other_versions">intent_other_versions</string>
    <string name="intent_comic_title">intent_comic_title</string>
    <string name="intent_comic_id">intent_comic_id</string>
    <string name="intent_creators">intent_creators</string>
    <string name="intent_creator_id">intent_creator_id</string>
    <string name="intent_comic_cover">intent_comic_cover</string>

    <!-- Image names -->
    <string name="comic_image">Comic</string>

    <!-- Alert Dialogs -->
    <string name="alert_dialog_error_title">Something Went Wrong</string>
    <string name="alert_dialog_go_back">Go Back</string>
    <string name="alert_dialog_report_error">Report Error</string>

    <!-- Toolbar -->
    <string name="toolbar_submit_report_text">Submit a Correction</string>
    <string name="toolbar_share_comic_text">Share Comic</string>
    <string name="search_hint">Search,&#8320;</string>


    <!-- ### Layout Content Strings ### -->

    <!-- Common -->
    <string name="common_user_rating_header">You</string>
    <string name="common_average_ratings">Avg. %1$s</string>
    <string name="common_reviews">%1$s Reviews</string>
    <string name="common_see_all">See All</string>
    <string name="common_no_comics_in_box">There are no comics in this box&#8230;</string>

    <!-- Home -->
    <string name="home_new_releases_header">New Releases This Week</string>
    <string name="home_boxes_header">My Comic Boxes</string>
    <string name="home_collected_header">Collected</string>
    <string name="home_read_header">Read</string>
    <string name="home_reviews_header">Reviewed</string>
    <string name="home_no_new_releases">No Releases Found&#8230;</string>

    <!-- Settings -->
    <string name="account_log_out">Log Out</string>
    <string name="account_header">Account</string>
    <string name="legal_header">Legal</string>
    <string name="support_header">Support</string>
    <string name="account_username_text">Username</string>
    <string name="legal_privacy_policy_text">Privacy Policy</string>
    <string name="support_help_text">Help</string>
    <string name="support_contact_us_text">Contact Us / Report an Issue</string>
    <string name="support_about_text">About Compendia</string>
    <string name="support_donate_text">Donate</string>
    <string name="legal_terms_of_service_text">Terms of Service</string>
    <string name="settings_copyright_text">© 2019 Compendia Software</string>
    <string name="settings_version_text">Version 1.0.0 - Build 27015</string>

    <!-- Change Password -->
    <string name="change_password_text">Change Password</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>

    <!-- Comic Detail -->
    <string name="comic_detail_date_collected_header">Date Collected</string>
    <string name="comic_detail_other_versions_text">%1$s Other Version(s)</string>
    <string name="comic_detail_creators_header">Creators</string>
    <string name="comic_detail_collection_details_header">Collection Details</string>
    <string name="comic_detail_purchase_price_header">Purchase Price</string>
    <string name="comic_detail_bought_at_header">Bought At</string>
    <string name="comic_detail_condition_header">Condition</string>
    <string name="comic_detail_grade_header">Grade</string>
    <string name="comic_detail_quantity_header">Quantity</string>
    <string name="comic_detail_boxes_header">Boxes</string>
    <string name="comic_detail_box_name_want">Want</string>
    <string name="comic_detail_box_name_favorite">Favorite</string>
    <string name="comic_detail_box_name_read">Read</string>
    <string name="comic_detail_no_reviews">No Reviews</string>
    <string name="comic_detail_no_comic_error">Couldn\'t Find Comic Details&#8230;</string>
    <string name="comic_detail_no_description">No Description</string>
    <string name="comic_detail_see_all_creators_text">See All Creators</string>
    <string name="comic_detail_no_creators">No Creators Listed</string>
    <string name="comic_detail_mature_rating">Mature</string>
    <string name="comic_detail_not_rated">Not Rated</string>
    <string name="comic_detail_no_release_date">No Release Date</string>
    <string name="comic_detail_no_collected_date">No Date Collected</string>
    <string name="comic_detail_no_ratings">No Ratings</string>

    <!-- Collection -->
    <string name="collection_recently_added_header">Recently Added</string>

    <!-- Other Versions -->
    <string name="other_versions_list_item_cover">Comic Cover Image</string>

    <!-- Authentication -->
    <string name="register">Register</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_reset_info">We\'ve emailed you instructions for setting your password. If an account exists
        with the email you entered.
        You should receive them shortly.If you don\'t receive an email, please make sure you\'ve entered the address you
        registered with,
        and check your spam folder.
    </string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up!</string>


    <!-- ### Accessibility Content Descriptions ### -->

    <!-- Common -->
    <string name="content_description_back_arrow">Go back to previous screen</string>
    <string name="content_description_kabob_menu">Open additional options sub menu</string>
    <string name="content_description_reviews_button">Go to reviews of this comic</string>
    <string name="compendia_icon">Compendia Icon</string>

    <!-- Home Fragment Layout -->
    <string name="content_description_home_see_all_new_releases_button">Navigate to full New Releases list</string>
    <string name="content_description_home_view_box_button">See comics in box</string>
    <string name="content_description_home_settings_button">Open Settings</string>

    <!-- Comic Detail Fragment Layout -->
    <string name="content_description_comic_detail_other_versions">Go to other versions of this comic</string>
    <string name="content_description_comic_detail_have_read">You have read this comic</string>
    <string name="content_description_comic_detail_in_collection">This comic is in your collection</string>
    <string name="content_description_comic_detail_creator_button">Go to creator</string>
    <string name="content_description_comic_detail_edit_collection_details">Edit collection details for this comic</string>
    <string name="content_description_comic_detail_cover">Comic Cover Art</string>
    <string name="content_description_comic_detail_see_all_creators">Navigate to full list of creators</string>

    <!-- Pull List Fragment Layout -->
    <string name="content_description_pull_list_kabob_menu">Open additional options sub menu for this comic</string>
    <string name="content_description_pull_list_expand_week_item">Expand week</string>

    <!-- Settings Fragment -->
    <string name="content_description_settings_support_help">Navigate to app help screen</string>
    <string name="content_description_legal_privacy_policy">Navigate to privacy policy screen</string>
    <string name="content_description_legal_terms_of_service">Navigate to terms of service screen</string>
    <string name="content_description_settings_support_about">Navigate to about screen</string>
    <string name="content_description_settings_support_donate">Navigate to donate screen</string>
    <string name="content_description_settings_support_contact">Navigate to contact us screen</string>

</resources>
